<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/preference_logged_in_key"
        android:title="@string/preference_logged_in_text"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:enabled="false"
        android:key="@string/preference_download_images_key"
        android:summary="@string/preference_download_images_summary"
        android:title="@string/preference_download_images_text"/>

    <Preference
        android:key="@string/preference_clear_history_key"
        android:title="@string/preference_clear_history_text"/>

    <Preference
        android:key="@string/preference_feedback_key"
        android:summary="@string/preference_feedback_summary"
        android:title="@string/preference_feedback_text"/>

</PreferenceScreen>